--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,11 +7,10 @@
 /* The styling of login/sigup come from https://thecuriouscorp.com/react-login-page/ */
 
 body {
-  background: rgb(34, 193, 195);
   background: linear-gradient(
     135deg,
-    rgba(34, 193, 195, 1) 0%,
-    rgba(253, 187, 45, 1) 100%
+    rgb(247, 247, 246) 0%,
+    rgb(230, 223, 208) 100%
   );
   font-family: "work sans";
 }
